--- a/configuration.yaml
+++ b/configuration.yaml
@@ -77,10 +77,12 @@ sensor:
         friendly_name: "Lounge Purifier"
         value_template: '{{ states.fan.lounge_purifier.attributes.temperature }}'
         unit_of_measurement: '°C'
-      lounge_temperature:
-        friendly_name: "Lounge Purifier"
-        value_template: '{{ states.fan.lounge_purifier.attributes.temperature }}'
-        unit_of_measurement: '°C'
+      sunset_time:
+        value_template: '{% set timestamp = as_timestamp(states.sun.sun.attributes.next_setting) | timestamp_custom("%I:%M") %} {{ timestamp.lstrip("0") }}'
+        friendly_name: "Next setting"
+      sunrise_time:
+        value_template: '{% set timestamp = as_timestamp(states.sun.sun.attributes.next_rising) | timestamp_custom("%I:%M") %} {{ timestamp.lstrip("0") }}'
+        friendly_name: "Next rising"
 
 weather:
   - platform: yweather
