--- a/configuration.yaml
+++ b/configuration.yaml
@@ -77,6 +77,10 @@ sensor:
         friendly_name: "Lounge Purifier"
         value_template: '{{ states.fan.lounge_purifier.attributes.temperature }}'
         unit_of_measurement: '°C'
+      avg_lounge_temperature:
+        friendly_name: "Average Lounge Temperature"
+        value_template: '{{ ((float(states("sensor.temperature_158d0001217046")) + float(states.fan.lounge_purifier.attributes.temperature)) / 2) | round(1) }}'
+        unit_of_measurement: '°C'
       sunset_time:
         value_template: '{% set timestamp = as_timestamp(states.sun.sun.attributes.next_setting) | timestamp_custom("%I:%M") %} {{ timestamp.lstrip("0") }}'
         friendly_name: "Next setting"
