--- a/configuration.yaml
+++ b/configuration.yaml
@@ -78,7 +78,7 @@ sensor:
         value_template: '{{ states.fan.lounge_purifier.attributes.temperature }}'
         unit_of_measurement: '°C'
       avg_lounge_temperature:
-        friendly_name: "Average Lounge Temperature"
+        friendly_name: "Lounge Temperature"
         value_template: '{{ ((float(states("sensor.temperature_158d0001217046")) + float(states.fan.lounge_purifier.attributes.temperature)) / 2) | round(1) }}'
         unit_of_measurement: '°C'
       sunset_time:
